# pigeonwar-client

./: CMakeLists.txt
data/xmls/: ui.xml
src/: board_container.h  client.cpp  client.h  core.cpp  core.h  game.cpp  game.h  game_state.h  main.cpp
src/animations/: animations_handlers.cpp  animations_handlers.h  animations_service.cpp  animations_service.h
src/gui/: board_panel.cpp  board_panel.h  buttons_panel.cpp  buttons_panel.h  view_constants.h
src/messages/: json_message_conversions.h  message_makers.cpp  message_makers.h
src/sprites/: drawer_factory.cpp  drawer_factory.h  entity_holder.cpp  entity_holder.h  sprites_manager.cpp  sprites_manager.h
src/utils/: threadsafe_queue.h
